[tool.poetry]
name = "dashpssh"
version = "1.0.0"
description = "PSSH parser for DASH manifests"
authors = ["Micael Silva <micaelsilva@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "dashpssh", from = "src" }
]

include = [
    { path = "tests", format = "sdist" }
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"