[project]
name = "dashpssh"
version = "0.0.1"
authors = [
  { name="Micael Silva", email="micaelsilva@gmail.com" },
]
description = "PSSH parser for DASH manifests"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"